--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -1,10 +1,19 @@
-html {
-  background-image: url("../assets/books.jpg");
-  background-position: stretch;
-}
-
 p {
   font-family: sans-serif;
+  font-weight: 400;
+}
+
+.profile > p {
+  text-align: center;
+}
+
+h1 {
+  color: #7f6654;
+  text-align: left;
+  font-size: 30px;
+  font-family: sans-serif;
+  font-weight: lighter;
+  margin: 10px 0px;
 }
 
 h2 {
@@ -36,10 +45,10 @@ h2 {
 
 .tag {
   flex: 1;
-  padding: 5px;
+  padding: 10px;
   line-height: 50px;
   font-size: 20px;
-  border: 1px solid brown;
+  border: 2px solid #7f6654;
   border-radius: 10px;
   background-color: white;
 }
