--- a/src/styles/reusable.css
+++ b/src/styles/reusable.css
@@ -12,11 +12,9 @@ ul {
 
 li {
   display: inline;
-  text-align: center;
-  background-color: #7f6654;
-  padding: 15px;
   margin: none;
 }
+
 a {
   text-decoration: none;
   color: white;
@@ -43,6 +41,7 @@ input:focus {
   font-size: 20px;
   border-radius: 5px;
   background-color: #7f6654;
+  font-family: sans-serif;
 }
 
 .button-submit:hover {
