--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -16,6 +16,14 @@ h1 {
   margin: 10px 0px;
 }
 
+#description-textarea {
+  height: 120px;
+  width: 450px;
+  padding: 10px;
+  resize: none;
+  font-size: 15px;
+}
+
 .profile-picture {
   display: table;
   margin: 50px auto 0px auto;
@@ -57,4 +65,12 @@ h1 {
   width: 545px;
   float: left;
   margin: auto 10px;
+}
+
+.edit {
+}
+
+.edit:hover {
+  cursor: pointer;
+  text-decoration: underline;
 }
