--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -1,5 +1,4 @@
 p {
-  font-family: sans-serif;
   font-weight: 400;
 }
 
@@ -7,11 +6,17 @@ p {
   text-align: center;
 }
 
+input {
+  height: 30px;
+  width: 300px;
+  font-size: 15px;
+  padding: 5px 10px;
+}
+
 h1 {
   color: #7f6654;
   text-align: left;
   font-size: 30px;
-  font-family: sans-serif;
   font-weight: lighter;
   margin: 10px 0px;
 }
@@ -22,6 +27,15 @@ h1 {
   padding: 10px;
   resize: none;
   font-size: 15px;
+}
+
+#add-tags {
+  width: 100px;
+}
+#add {
+  font-size: 20px;
+  padding: 5px;
+  margin: 5px;
 }
 
 .profile-picture {
@@ -46,19 +60,23 @@ h1 {
   color: #7f6654;
   text-align: left;
   font-size: 20px;
-  font-family: sans-serif;
   font-weight: lighter;
   margin-right: 10px;
 }
 
 .tag {
-  flex: 1;
-  padding: 10px;
-  line-height: 50px;
+  display: inline-block;
+  padding: 5px;
+  line-height: 30px;
   font-size: 20px;
   border: 2px solid #7f6654;
   border-radius: 10px;
   background-color: white;
+  margin: 5px 2px;
+}
+
+.remove-tag {
+  padding: 0px 4px !important;
 }
 
 .split-page {
