--- a/src/styles/reusable.css
+++ b/src/styles/reusable.css
@@ -1,6 +1,9 @@
 html {
   background-image: url("../assets/books.jpg");
   background-position: stretch;
+  font-family: 'Didact Gothic', sans-serif;
+  font-size: 18px;
+  font-weight: lighter;
 }
 
 ul {
@@ -18,7 +21,6 @@ li {
 a {
   text-decoration: none;
   color: white;
-  font-family: sans-serif;
   font-size: 15px;
 }
 
@@ -41,7 +43,6 @@ input:focus {
   font-size: 20px;
   border-radius: 5px;
   background-color: #7f6654;
-  font-family: sans-serif;
 }
 
 .button-submit:hover {
