--- a/src/styles/reusable.css
+++ b/src/styles/reusable.css
@@ -6,6 +6,12 @@ html {
   font-weight: lighter;
 }
 
+img,
+image,
+video {
+  object-fit: cover;
+}
+
 ul {
   list-style-type: none;
   margin: 0;
@@ -36,7 +42,7 @@ input:focus {
 
 .button-submit {
   text-align: center;
-  margin: 0px 0px 25px 0px;
+  margin: 0px 0px 10px 0px;
   padding: 10px;
   border: none;
   color: white;
@@ -55,15 +61,20 @@ input:focus {
   margin: 30px 10px;
   float: left;
   padding: 10px 10px 10px 30px;
-  border-radius: 10px;
 }
 
 .profile {
   background-color: #bb9062;
-  border-radius: 10px;
   width: 100px;
   float: left;
   margin: 10px;
+  box-shadow: 4px 4px 4px #7f6654;
+}
+
+.profile > p {
+  text-align: center;
+  font-size: 20px;
+  margin: 5px 0px 10px 0px;
 }
 
 .profile:hover {
@@ -74,6 +85,4 @@ input:focus {
 .profile-image {
   height: 100px;
   width: 100px;
-  border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
 }
