--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -52,6 +52,12 @@ h1 {
   border-radius: 50%;
 }
 
+#location-map {
+  height: 300px;
+  width: 500px;
+  border: 1px solid #7f6654;
+}
+
 .info {
   background-color: white;
   padding: 0px 20px 15px 20px;
