Implemented EJS views and Express API into Minder

--- a/myapp/public/stylesheets/reusable.css
+++ b/myapp/public/stylesheets/reusable.css
@@ -1,5 +1,5 @@
 html {
-  background-image: url("../assets/books.jpg");
+  background-image: url("../images/books.jpg");
   background-position: stretch;
   font-family: 'Didact Gothic', sans-serif;
   font-size: 18px;
