--- a/myapp/views/connect.ejs
+++ b/myapp/views/connect.ejs
@@ -6,17 +6,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="../styles/connect.css">
-    <link rel="stylesheet" type="text/css" href="../styles/reusable.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/connect.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/reusable.css">
     <link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
   </head>
   <body>
     <ul>
-      <li><a class="button-submit" href="discovery.html">Discover</a></li>
-      <li><a class="button-submit" href="self-profile.html">My Profile</a></li>
-      <li><a class="button-submit" href="messages.html">Messages</a></li>
-      <li><a class="button-submit" href="discovery.html">Notifications</a></li>
-      <li><a class="button-submit" href="signup-login-page.html">Logout</a></li>
+      <li><a class="button-submit" href="discovery">Discover</a></li>
+      <li><a class="button-submit" href="self-profile">My Profile</a></li>
+      <li><a class="button-submit" href="messages">Messages</a></li>
+      <li><a class="button-submit" href="discovery">Notifications</a></li>
+      <li><a class="button-submit" href="index">Logout</a></li>
     </ul>
     <div class="center-content">
       <div>
@@ -34,49 +34,47 @@
           <h2>Pending Invites</h2>
           <div id="pending-invites">
             <div class="profile">
-              <img class="profile-image pending-invite" src="../assets/sonia.jpg">
+              <img class="profile-image pending-invite" src="images/sonia.jpg">
               <p>Sonia Xu</p>
               <div class="center-content">
                 <div class="button-submit cancel-invite">Cancel</div>
               </div>
             </div>
             <div class="profile">
-              <img class="profile-image pending-invite" src="../assets/sonia.jpg">
+              <img class="profile-image pending-invite" src="images/sonia.jpg">
               <p>Sonia Xu</p>
               <div class="center-content">
                 <div class="button-submit cancel-invite">Cancel</div>
               </div>
             </div>
             <div class="profile">
-              <img class="profile-image pending-invite" src="../assets/sonia.jpg">
+              <img class="profile-image pending-invite" src="images/sonia.jpg">
               <p>Sonia Xu</p>
               <div class="center-content">
                 <div class="button-submit cancel-invite">Cancel</div>
               </div>
             </div>
             <div class="profile">
-              <img class="profile-image pending-invite" src="../assets/sonia.jpg">
+              <img class="profile-image pending-invite" src="images/sonia.jpg">
               <p>Sonia Xu</p>
               <div class="center-content">
                 <div class="button-submit cancel-invite">Cancel</div>
               </div>
             </div>
             <div class="profile">
-              <img class="profile-image pending-invite" src="../assets/sonia.jpg">
+              <img class="profile-image pending-invite" src="images/sonia.jpg">
               <p>Sonia Xu</p>
               <div class="center-content">
                 <div class="button-submit cancel-invite">Cancel</div>
               </div>
             </div>
-
-
         </div>
       </div>
     </div>
   </body>
 
   <footer>
-    <script src="../scripts/connect.js"></script>
+    <script src="javascripts/connect.js"></script>
   </footer>
 
 </html>
