--- a/myapp/views/messages.ejs
+++ b/myapp/views/messages.ejs
@@ -6,18 +6,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="../styles/messages.css">
-    <link rel="stylesheet" type="text/css" href="../styles/reusable.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/messages.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/reusable.css">
     <link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
   </head>
 
   <body>
     <ul>
-      <li><a class="button-submit" href="discovery.html">Discover</a></li>
-      <li><a class="button-submit" href="self-profile.html">My Profile</a></li>
-      <li><a class="button-submit" href="messages.html">Messages</a></li>
-      <li><a class="button-submit" href="discovery.html">Notifications</a></li>
-      <li><a class="button-submit" href="signup-login-page.html">Logout</a></li>
+      <li><a class="button-submit" href="discovery">Discover</a></li>
+      <li><a class="button-submit" href="self-profile">My Profile</a></li>
+      <li><a class="button-submit" href="messages">Messages</a></li>
+      <li><a class="button-submit" href="discovery">Notifications</a></li>
+      <li><a class="button-submit" href="index">Logout</a></li>
     </ul>
     <div class="center-content">
       <div class="info">
@@ -26,43 +26,43 @@
             <ul id="users-container">
               <li>
                 <div class="users-message">
-                  <img class="profile-image" src="../assets/sonia.jpg" />
+                  <img class="profile-image" src="images/sonia.jpg" />
                   <div class="message-preview">Hey, hows it going? I would like to connect!</div>
                 </div>
               </li>
               <li>
                 <div class="users-message">
-                  <img class="profile-image" src="../assets/sonia.jpg" />
+                  <img class="profile-image" src="images/sonia.jpg" />
                   <div class="message-preview">Hey, hows it going? I would like to connect!</div>
                 </div>
               </li>
               <li>
                 <div class="users-message">
-                  <img class="profile-image" src="../assets/sonia.jpg" />
+                  <img class="profile-image" src="images/sonia.jpg" />
                   <div class="message-preview">Hey, hows it going? I would like to connect!</div>
                 </div>
               </li>
               <li>
                 <div class="users-message">
-                  <img class="profile-image" src="../assets/sonia.jpg" />
+                  <img class="profile-image" src="images/sonia.jpg" />
                   <div class="message-preview">Hey, hows it going? I would like to connect!</div>
                 </div>
               </li>
               <li>
                 <div class="users-message">
-                  <img class="profile-image" src="../assets/sonia.jpg" />
+                  <img class="profile-image" src="images/sonia.jpg" />
                   <div class="message-preview">Hey, hows it going? I would like to connect!</div>
                 </div>
               </li>
               <li>
                 <div class="users-message">
-                  <img class="profile-image" src="../assets/sonia.jpg" />
+                  <img class="profile-image" src="images/sonia.jpg" />
                   <div class="message-preview">Hey, hows it going? I would like to connect!</div>
                 </div>
               </li>
               <li>
                 <div class="users-message">
-                  <img class="profile-image" src="../assets/sonia.jpg" />
+                  <img class="profile-image" src="images/sonia.jpg" />
                   <div class="message-preview">Hey, hows it going? I would like to connect!</div>
                 </div>
               </li>
@@ -70,31 +70,31 @@
             <div id="messages-container">
               <div id="messages">
                 <div class="message-item">
-                  <img class="profile-icon-image" src="../assets/sonia.jpg"/>
+                  <img class="profile-icon-image" src="images/sonia.jpg"/>
                   <p class="message-text">
                     heyyyyyy
                   </p>
                 </div>
                 <div class="message-item">
-                  <img class="profile-icon-image" src="../assets/sonia.jpg"/>
+                  <img class="profile-icon-image" src="images/sonia.jpg"/>
                   <p class="message-text">
                     there's this lantern festival thing coming up and i was wondering if you wanted to go?
                   </p>
                 </div>
                 <div class="message-item">
-                  <img class="profile-icon-image" src="../assets/elton.jpg"/>
+                  <img class="profile-icon-image" src="images/elton.jpg"/>
                   <p class="message-text">
                     when and what time? I'm kinda interested
                   </p>
                 </div>
                 <div class="message-item">
-                  <img class="profile-icon-image" src="../assets/sonia.jpg"/>
+                  <img class="profile-icon-image" src="images/sonia.jpg"/>
                   <p class="message-text">
                     i think it's next Monday from 12pm to 5pm? Don't quote me cuz this is from memory haha
                   </p>
                 </div>
                 <div class="message-item">
-                  <img class="profile-icon-image" src="../assets/elton.jpg"/>
+                  <img class="profile-icon-image" src="images/elton.jpg"/>
                   <p class="message-text">
                     hmmmmmmmm
                   </p>
@@ -116,7 +116,7 @@
   </body>
 
   <footer>
-    <script src="../scripts/messages.js"></script>
+    <script src="javascripts/messages.js"></script>
   </footer>
 
 </html>
