--- a/myapp/views/self-profile.ejs
+++ b/myapp/views/self-profile.ejs
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <link rel="stylesheet" type="text/css" href="../styles/profile.css">
-    <link rel="stylesheet" type="text/css" href="../styles/reusable.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/profile.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/reusable.css">
     <link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="http://maps.google.com/maps/api/js?sensor=false&key=AIzaSyAp1-GKiZX19UcOZjRaTLlurgboIyS6UT8"
@@ -18,14 +18,14 @@
 
   <body id="page-container">
     <ul>
-      <li><a class="button-submit" href="discovery.html">Discover</a></li>
-      <li><a class="button-submit" href="self-profile.html">My Profile</a></li>
-      <li><a class="button-submit" href="messages.html">Messages</a></li>
-      <li><a class="button-submit" href="discovery.html">Notifications</a></li>
-      <li><a class="button-submit" href="signup-login-page.html">Logout</a></li>
+      <li><a class="button-submit" href="discovery">Discover</a></li>
+      <li><a class="button-submit" href="self-profile">My Profile</a></li>
+      <li><a class="button-submit" href="messages">Messages</a></li>
+      <li><a class="button-submit" href="discovery">Notifications</a></li>
+      <li><a class="button-submit" href="index">Logout</a></li>
     </ul>
 
-    <img id="profile-picture" src="../assets/elton.jpg"></img>
+    <img id="profile-picture" src="images/elton.jpg"></img>
     <canvas class="hidden"></canvas>
     <div class="center-content">
       <div id="edit-profile-picture" class="button-submit">Edit Photo</div>
@@ -72,7 +72,7 @@
   </body>
 
   <footer>
-    <script src="../scripts/self-profile.js"></script>
+    <script src="javascripts/self-profile.js"></script>
   </footer>
 
 </html>
