--- a/myapp/views/signup-login-page.ejs
+++ b/myapp/views/signup-login-page.ejs
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="../styles/signup-login-page.css">
-    <link rel="stylesheet" type="text/css" href="../styles/reusable.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/signup-login-page.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/reusable.css">
     <link href="https://fonts.googleapis.com/css?family=Pacifico|Didact+Gothic" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   </head>
@@ -55,6 +55,6 @@
     </div>
   </body>
   <footer>
-    <script src="../scripts/signup-login-page.js"></script>
+    <script src="javascripts/signup-login-page.js"></script>
   </footer>
 </html>
