--- a/myapp/views/discovery.ejs
+++ b/myapp/views/discovery.ejs
@@ -6,17 +6,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="../styles/discovery.css">
-    <link rel="stylesheet" type="text/css" href="../styles/reusable.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/discovery.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/reusable.css">
     <link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
   </head>
   <body>
     <ul>
-      <li><a class="button-submit" href="discovery.html">Discover</a></li>
-      <li><a class="button-submit" href="self-profile.html">My Profile</a></li>
-      <li><a class="button-submit" href="messages.html">Messages</a></li>
-      <li><a class="button-submit" href="discovery.html">Notifications</a></li>
-      <li><a class="button-submit" href="signup-login-page.html">Logout</a></li>
+      <li><a class="button-submit" href="discovery">Discover</a></li>
+      <li><a class="button-submit" href="self-profile">My Profile</a></li>
+      <li><a class="button-submit" href="messages">Messages</a></li>
+      <li><a class="button-submit" href="discovery">Notifications</a></li>
+      <li><a class="button-submit" href="index">Logout</a></li>
     </ul>
     <div id="title-header" class="center-content">
       <input id="search-bar"></input>
@@ -27,27 +27,27 @@
             <h2>Locals</h2>
           <div>
             <div class="profile">
-              <img class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="images/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <img class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="images/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <img class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="images/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <img class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="images/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <img class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="images/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <img class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="images/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
 
@@ -57,27 +57,27 @@
             <h2>Similar Tags</h2>
           <div>
             <div class="profile">
-              <img class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="images/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <img class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="images/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <img class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="images/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <img class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="images/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <img class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="images/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <img class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="images/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
 
@@ -87,27 +87,27 @@
             <h2>Random</h2>
           <div>
             <div class="profile">
-              <img class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="images/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <img class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="images/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <img class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="images/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <img class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="images/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <img class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="images/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <img class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="images/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
 
@@ -117,7 +117,7 @@
   </body>
 
   <footer>
-    <script src="../scripts/discovery.js"></script>
+    <script src="javascripts/discovery.js"></script>
   </footer>
 
 </html>
