--- a/myapp/views/user-profile.ejs
+++ b/myapp/views/user-profile.ejs
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <link rel="stylesheet" type="text/css" href="../styles/profile.css">
-    <link rel="stylesheet" type="text/css" href="../styles/reusable.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/profile.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/reusable.css">
     <link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
 
     <script src="http://maps.google.com/maps/api/js?libraries=places&key=AIzaSyAp1-GKiZX19UcOZjRaTLlurgboIyS6UT8"
@@ -18,13 +18,13 @@
 
   <body>
     <ul>
-      <li><a class="button-submit" href="discovery.html">Discover</a></li>
-      <li><a class="button-submit" href="self-profile.html">My Profile</a></li>
-      <li><a class="button-submit" href="messages.html">Messages</a></li>
-      <li><a class="button-submit" href="discovery.html">Notifications</a></li>
-      <li><a class="button-submit" href="signup-login-page.html">Logout</a></li>
+      <li><a class="button-submit" href="discovery">Discover</a></li>
+      <li><a class="button-submit" href="self-profile">My Profile</a></li>
+      <li><a class="button-submit" href="messages">Messages</a></li>
+      <li><a class="button-submit" href="discovery">Notifications</a></li>
+      <li><a class="button-submit" href="index">Logout</a></li>
     </ul>
-    <img id="profile-picture" src="../assets/sonia.jpg" />
+    <img id="profile-picture" src="images/sonia.jpg" />
     <div class="center-content">
       <h1>Sonia Xu</h1>
     </div>
@@ -88,27 +88,27 @@
           <h1>Connections</h1>
           <div>
             <div class="profile">
-              <img class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="images/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <img class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="images/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <img class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="images/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <img class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="images/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <img class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="images/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
             <div class="profile">
-              <img class="profile-image" src="../assets/sonia.jpg">
+              <img class="profile-image" src="images/sonia.jpg">
               <p>Sonia Xu</p>
             </div>
         </div>
@@ -118,27 +118,27 @@
             <h1>Similar Profiles</h1>
             <div>
               <div class="profile">
-                <img class="profile-image" src="../assets/sonia.jpg">
+                <img class="profile-image" src="images/sonia.jpg">
                 <p>Sonia Xu</p>
               </div>
               <div class="profile">
-                <img class="profile-image" src="../assets/sonia.jpg">
+                <img class="profile-image" src="images/sonia.jpg">
                 <p>Sonia Xu</p>
               </div>
               <div class="profile">
-                <img class="profile-image" src="../assets/sonia.jpg">
+                <img class="profile-image" src="images/sonia.jpg">
                 <p>Sonia Xu</p>
               </div>
               <div class="profile">
-                <img class="profile-image" src="../assets/sonia.jpg">
+                <img class="profile-image" src="images/sonia.jpg">
                 <p>Sonia Xu</p>
               </div>
               <div class="profile">
-                <img class="profile-image" src="../assets/sonia.jpg">
+                <img class="profile-image" src="images/sonia.jpg">
                 <p>Sonia Xu</p>
               </div>
               <div class="profile">
-                <img class="profile-image" src="../assets/sonia.jpg">
+                <img class="profile-image" src="images/sonia.jpg">
                 <p>Sonia Xu</p>
               </div>
           </div>
@@ -147,7 +147,7 @@
   </body>
 
   <footer>
-    <script src="../scripts/user-profile.js"></script>
+    <script src="javascripts/user-profile.js"></script>
   </footer>
 
 </html>
