Added login/logout features, as well as user sessions

--- a/myapp/public/stylesheets/signup-login-page.css
+++ b/myapp/public/stylesheets/signup-login-page.css
@@ -39,3 +39,9 @@ input {
   font-weight: lighter;
   text-shadow: 1px 1px 1px white;
 }
+
+.success {
+  color: green;
+  font-weight: lighter;
+  text-shadow: 1px 1px 1px white;
+}
