--- a/myapp/views/connect.ejs
+++ b/myapp/views/connect.ejs
@@ -16,7 +16,7 @@
       <li><a class="button-submit" href="self-profile">My Profile</a></li>
       <li><a class="button-submit" href="messages">Messages</a></li>
       <li><a class="button-submit" href="discovery">Notifications</a></li>
-      <li><a class="button-submit" href="index">Logout</a></li>
+      <li><a class="button-submit" href="logout">Logout</a></li>
     </ul>
     <div class="center-content">
       <div>
