--- a/myapp/views/self-profile.ejs
+++ b/myapp/views/self-profile.ejs
@@ -22,7 +22,7 @@
       <li><a class="button-submit" href="self-profile">My Profile</a></li>
       <li><a class="button-submit" href="messages">Messages</a></li>
       <li><a class="button-submit" href="discovery">Notifications</a></li>
-      <li><a class="button-submit" href="index">Logout</a></li>
+      <li><a class="button-submit" href="logout">Logout</a></li>
     </ul>
 
     <img id="profile-picture" src="images/elton.jpg"></img>
@@ -72,6 +72,9 @@
   </body>
 
   <footer>
+    <script type="text/javascript">
+      let currentUser = <%- JSON.stringify(user) %>;
+    </script>
     <script src="javascripts/self-profile.js"></script>
   </footer>
 
