--- a/myapp/views/user-profile.ejs
+++ b/myapp/views/user-profile.ejs
@@ -22,7 +22,7 @@
       <li><a class="button-submit" href="self-profile">My Profile</a></li>
       <li><a class="button-submit" href="messages">Messages</a></li>
       <li><a class="button-submit" href="discovery">Notifications</a></li>
-      <li><a class="button-submit" href="index">Logout</a></li>
+      <li><a class="button-submit" href="logout">Logout</a></li>
     </ul>
     <img id="profile-picture" src="images/sonia.jpg" />
     <div class="center-content">
