--- a/myapp/views/signup-login-page.ejs
+++ b/myapp/views/signup-login-page.ejs
@@ -2,13 +2,8 @@
 <html>
   <head>
     <title>Minder</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <% include ./header %>
     <link rel="stylesheet" type="text/css" href="stylesheets/signup-login-page.css">
-    <link rel="stylesheet" type="text/css" href="stylesheets/reusable.css">
-    <link href="https://fonts.googleapis.com/css?family=Pacifico|Didact+Gothic" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   </head>
 
   <body>
@@ -55,6 +50,7 @@
     </div>
   </body>
   <footer>
+    <% include ./footer %>
     <script src="javascripts/signup-login-page.js"></script>
   </footer>
 </html>
