Rearranged files and added API capabilities for similar tags, near, and global

--- a/views/self-profile.ejs
+++ b/views/self-profile.ejs
@@ -51,7 +51,7 @@
             <h2 id="edit-location-container">Location <span id="edit-location" class="edit">(Edit)</span></h2>
             <p id="edit-current">
               <strong>Current: </strong>
-              <span id="current"><%= user.location %></span>
+              <span id="current"><%= user.location.name %></span>
               <div id="location-map"></div>
             </p>
           </div>
