--- a/views/discovery.ejs
+++ b/views/discovery.ejs
@@ -14,92 +14,20 @@
     </div>
     <div class="center-content">
       <div class="match-info">
-            <h2>Locals</h2>
-          <div>
-            <div class="profile">
-              <img class="profile-image" src="images/sonia.jpg">
-              <p>Sonia Xu</p>
-            </div>
-            <div class="profile">
-              <img class="profile-image" src="images/sonia.jpg">
-              <p>Sonia Xu</p>
-            </div>
-            <div class="profile">
-              <img class="profile-image" src="images/sonia.jpg">
-              <p>Sonia Xu</p>
-            </div>
-            <div class="profile">
-              <img class="profile-image" src="images/sonia.jpg">
-              <p>Sonia Xu</p>
-            </div>
-            <div class="profile">
-              <img class="profile-image" src="images/sonia.jpg">
-              <p>Sonia Xu</p>
-            </div>
-            <div class="profile">
-              <img class="profile-image" src="images/sonia.jpg">
-              <p>Sonia Xu</p>
-            </div>
+        <h2>Locals</h2>
+        <div id='locals-container'>
 
         </div>
       </div>
       <div class="match-info">
-            <h2>Similar Tags</h2>
-          <div>
-            <div class="profile">
-              <img class="profile-image" src="images/sonia.jpg">
-              <p>Sonia Xu</p>
-            </div>
-            <div class="profile">
-              <img class="profile-image" src="images/sonia.jpg">
-              <p>Sonia Xu</p>
-            </div>
-            <div class="profile">
-              <img class="profile-image" src="images/sonia.jpg">
-              <p>Sonia Xu</p>
-            </div>
-            <div class="profile">
-              <img class="profile-image" src="images/sonia.jpg">
-              <p>Sonia Xu</p>
-            </div>
-            <div class="profile">
-              <img class="profile-image" src="images/sonia.jpg">
-              <p>Sonia Xu</p>
-            </div>
-            <div class="profile">
-              <img class="profile-image" src="images/sonia.jpg">
-              <p>Sonia Xu</p>
-            </div>
+        <h2>Similar Tags</h2>
+        <div id="similar-tags-container">
 
         </div>
       </div>
       <div class="match-info">
-            <h2>Random</h2>
-          <div>
-            <div class="profile">
-              <img class="profile-image" src="images/sonia.jpg">
-              <p>Sonia Xu</p>
-            </div>
-            <div class="profile">
-              <img class="profile-image" src="images/sonia.jpg">
-              <p>Sonia Xu</p>
-            </div>
-            <div class="profile">
-              <img class="profile-image" src="images/sonia.jpg">
-              <p>Sonia Xu</p>
-            </div>
-            <div class="profile">
-              <img class="profile-image" src="images/sonia.jpg">
-              <p>Sonia Xu</p>
-            </div>
-            <div class="profile">
-              <img class="profile-image" src="images/sonia.jpg">
-              <p>Sonia Xu</p>
-            </div>
-            <div class="profile">
-              <img class="profile-image" src="images/sonia.jpg">
-              <p>Sonia Xu</p>
-            </div>
+        <h2>Random</h2>
+        <div id="randoms-container">
 
         </div>
       </div>
