--- a/views/discovery.ejs
+++ b/views/discovery.ejs
@@ -9,7 +9,7 @@
   <body>
     <% include ./navbar %>
     <div id="title-header" class="center-content">
-      <input placeholder="Search by name" id="search-bar"></input>
+      <input placeholder="Search by name" id="search-bar" onKeyPress="onSend(event, this)"></input>
       <div id="search" class="button-submit">SEARCH</div>
     </div>
     <div id="main-container" class="center-content">
