--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -13,7 +13,9 @@
         <div class="center-content">
           <div id="flex-container">
             <ul id="users-container">
-
+              <li>
+                <input placeholder="Search by name" id="search" onKeyUp="onSearch(event, this)"></input>
+              </li>
             </ul>
             <div id="messages-container">
               <div id="messages">
