--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -19,10 +19,10 @@
             </ul>
             <div id="messages-container">
               <div id="messages">
-
+                  
               </div>
               <div id="messages-input-container">
-                <input placeholder="To get started, enter a chat with a connection on the left" id="message-box" onKeyPress="onSend(event, this)"></input>
+                <input type="text" placeholder="To get started, enter a chat with a connection on the left" id="message-box" onKeyPress="onSend(event, this)"></input>
                 <div id="send" class="button-submit">Send</div>
               </div>
             </div>
