Implemented connections page functionality

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -2,6 +2,6 @@
   <li><a class="button-submit" href="discovery">Discover</a></li>
   <li><a class="button-submit" href="self-profile">My Profile</a></li>
   <li><a class="button-submit" href="messages">Messages</a></li>
-  <li><a class="button-submit" href="discovery">Notifications</a></li>
+  <li><a class="button-submit" href="connections">Connections</a></li>
   <li><a class="button-submit" href="logout">Logout</a></li>
 </ul>
