--- a/public/stylesheets/connections.css
+++ b/public/stylesheets/connections.css
@@ -24,6 +24,14 @@ p {
   color: white;
 }
 
+.profile:hover {
+  cursor: auto;
+}
+
+.profile-image:hover {
+  cursor: pointer;
+}
+
 .accept {
   background-color: #61c744;
 }
@@ -40,7 +48,6 @@ p {
 }
 
 .pending:hover {
-  cursor: pointer;
   color: black;
 }
 
